# rustprep

./: .gitignore  Cargo.toml  README.md
frontend/src/: App.tsx  api.ts  styles.ts
frontend/src/components/: DeleteModal.tsx  EmptyState.tsx  Spinner.tsx  ToastStack.tsx  UserForm.tsx  UserRow.tsx
frontend/src/hooks/: useBreakpoint.ts  useToasts.ts  useUsers.ts
frontend/src/types/: user.ts
migrations/: 20260308030030_users.sql  20260308030128_add_phone_to_users.sql  20260308030221_add_index_email.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: user_handler.rs
src/models/: user.rs
