[package]
name = "rust-crud-users"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web assíncrono
axum = { version = "0.7", features = ["json"] }

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# ORM/Query builder assíncrono para PostgreSQL
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# Serialização/Deserialização JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID para IDs únicos
uuid = { version = "1", features = ["v4", "serde"] }

# Datas e timestamps
chrono = { version = "0.4", features = ["serde"] }

# Tratamento de erros
thiserror = "1"
anyhow = "1"

# Variáveis de ambiente
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Camada de HTTP para axum
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
